--- a/04_deliverables.Rmd
+++ b/04_deliverables.Rmd
@@ -1,63 +1,5 @@
 # Deliverables and Grading
 
-## Grading
+This section is coming soon.
 
-The final course grade is weighted as follows:
-
-- 15% Class Participation / Group Work
-- 25% Seven Homework Assignments
-- 25% Two Quizzes
-- 35% Two Projects, including the Final Portfolio Presentation
-
-A cut point to discriminate A vs. B will be set in the range of 85% to 90% at the end of the term. 
-
-- A final average of 90% or higher will definitely receive an A. 
-- An average of 70% or higher is required to receive a B.
-
-## Homework Assignments
-
-There are a total of 7 regular homework assignments this semester. Details on these assignments [are found here](https://github.com/THOMASELOVE/2019-432/tree/master/assignments).
-
-Homework | Material Covered in the Assignment
-:-------: | :----------: | ----------------------------------------------------------
-1 | Building Table 1, Linear Regression
-2 | Linear Regression, ANOVA
-3 | Linear Regression
-4 | Logistic Regression
-5 | Logistic Regression
-6 | Generalized Linear Models 
-7 | Survival Analysis (Cox Regression Models)
-
-Homework 8 is cancelled.
-
-## Participation in the Course
-
-Students are required to **participate** actively in the course, including meaningful contributions in group work, in-class participation, emails to 431-help, visits to TA, etc. 
-
-- We're more concerned about the breadth of your participation rather than just its quantity. 
-- Most students score between 80% and 100% on this element.
-
-## Texts and Reading
-
-We'll be reading from two books in the first part of the term. Be sure you have access to them now.
-
-- Jeffrey Leek [How to be a Modern Scientist](https://leanpub.com/modernscientist)
-    - The entire book is about 100 pages. You can read it in 2-3 hours.
-- Garrett Grolemund and Hadley Wickham [R for Data Science](http://r4ds.had.co.nz/) 
-    - I expect that in 431, you read Sections 1-12 and 15 of this text, covering all of Part I (Explore) and most of Part II (Wrangle), but if not, you'll do that by the end of February.
-    - This term, we'll read Part IV (Model) and Part V (Communicate), before the first project is due in March.
-
-Details on when readings are to be complete can be found [in the Schedule](https://github.com/THOMASELOVE/2019-432/blob/master/SCHEDULE.md).
-
-## Quizzes
-
-Students are required to complete two **quizzes**, one in early March, and one in late April. The [details on the Quizzes are found here](https://github.com/THOMASELOVE/2019-432/tree/master/quizzes).
-
-
-## Project Assignments
-
-Students are required to complete two **project** assignments, one completed right after Spring Break in mid-March, and the other completed at the end of the term. [Details on the project assignments are found here](https://github.com/THOMASELOVE/2019-432/tree/master/projects).
-
-## Timing - Check the online Schedule
-
-The [course schedule](https://github.com/THOMASELOVE/2019-432/blob/master/SCHEDULE.md) is the most up-to-date resource for all deadlines in the course.
+The [Calendar](https://github.com/THOMASELOVE/2019-432/blob/master/calendar.md) is the most up-to-date resource for all deadlines in the course.
