--- a/index.Rmd
+++ b/index.Rmd
@@ -17,11 +17,13 @@ knitr::include_graphics("figures/cwru-stacked-logo-blue-no-tag.jpg")
 
 # Key Information {-}
 
-This is the Spring 2019 syllabus page for PQHS / CRSP / MPHP 432: Data Science for Biological, Medical and Health Research II, taught by Professor Thomas E. Love. The course is given on Tuesdays and Thursdays from 1:00 to 2:15 PM, in Room E321-323 in the School of Medicine.
+This is the Spring 2019 syllabus page for PQHS / CRSP / MPHP 432: Data Science for Biological, Medical and Health Research II, taught by Professor Thomas E. Love. The course is given on Tuesdays and Thursdays from 1:00 to 2:15 PM, in Room E321-323 in the Robbins building of the CWRU School of Medicine.
+
+Our first session will be on Tuesday **2019-01-22**, as Dr. Love is away the first week of the semester. Further meetings are listed in the [Course Calendar](https://github.com/THOMASELOVE/2019-432/blob/master/calendar.md).
 
 ## Course Home Page {-}
 
-The course home page, with links to everything else you'll need, is at https://github.com/THOMASELOVE/2019-432. 
+The course home page, with links to everything you'll need, is at https://github.com/THOMASELOVE/2019-432. That page contains a description of everything you need to do before our first class meeting.
 
 ## Getting Help! {-}
 
