--- a/01_description.Rmd
+++ b/01_description.Rmd
@@ -30,14 +30,13 @@ Some of these topics are reviewed in early 432 sessions.
 
 ## Everything is on the Web
 
-https://github.com/THOMASELOVE/2019-432 is the place to go for everything related to this course. Please visit any time you need something. I update the web site frequently. You'll find links there related to:
+https://github.com/THOMASELOVE/2019-432 is the place to go for everything related to this course. Please visit any time you need something. I update the web site frequently. 
 
-- a detailed **Calendar** of classes and deadlines
-- **Data and Code** I will provide
-- links and details on various outside **Texts**
-- my in-class presentation **Slides**
-- Your homework **Assignments**
-- instructions and hints related to the **Projects**
-- details on the **Quizzes**
+- The [Course Calendar](https://github.com/THOMASELOVE/432-2019/blob/master/calendar.md) serves as the final word for all deadlines, plus links to all classes and deliverables.
+- Dr. Love's [book of 432 Course Notes](https://thomaselove.github.io/2019-432-book/) is now available. This is the principal textbook for the course, and will be updated occasionally during the semester.
+- [Data and Code](https://github.com/THOMASELOVE/2019-432/tree/master/data-and-code) for the course are now available.
+- Readings and Supplemental Materials appear on the [References page](https://github.com/THOMASELOVE/2019-432/tree/master/references).
+- The [Slides page](https://github.com/THOMASELOVE/2019-432/tree/master/slides) provides links to presentation materials and READMEs for each class session.
 
+Also available on the course website are instructions and information on the course deliverables, including projects, homework and quizzes.
 
